@@ -3,6 +3,7 @@ $Id$
 1.10.2 --/--/----
 
 <call> params can now take properties or static strings rather than just XPath expressions
+Subtargets failure (in targets called by <call>) is propogated through <xmltask>
 
 Fixed jdk 1.3 incompatibility
 1.10.1 18/05/2004
